# dhrunner

./: .gitignore  CMakeLists.txt  README.md  main.cpp  utils.cpp  utils.hpp
scripts/: additional_roles.js  adjust_gun_damage.js  close_inventory.js  consolePipe.js  damage_modifier.js  data_collector.js  die_instantly.js  no_spyglass.js  rand_role.js  seal_musket.js  spell_cast_start.js  spell_charge_fix.js  spell_custom.js  test.js  totem_crafttime.js  totem_guard.js  train_mode.js
